chore(webapp): fix scrollbar styling

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -392,5 +392,5 @@ code {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: rgba(var(--font-color), 0.8) var(--background-color);
+  scrollbar-color: #666560 var(--background-color);
 }
